# TestWxAsSubmodule

./: .gitmodules  CMakeLists.txt  myapp.cpp  myapp.rc
